--- a/resources/osx/Info.plist
+++ b/resources/osx/Info.plist
@@ -8,7 +8,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>opendap.olfs</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.6.0</string>
+	<string>@OlfsVersion@</string>
 	<key>IFMajorVersion</key>
 	<integer>3</integer>
 	<key>IFMinorVersion</key>
