olfs: Checked in minor changes prior to 1.8.0 release

--- a/build.xml
+++ b/build.xml
@@ -328,6 +328,10 @@
                 <exclude name="opendap/semantics/**"/>
 
 
+                <!-- Exclude the Hyrax Admin Interface code  -->
+                <exclude name="opendap/hai/**"/>
+
+
             </fileset>
 
         </copy>
