olfs: Checking in prototype jsp code for the admin interface

--- a/resources/experiments/workerThread/WEB-INF/web.xml
+++ b/resources/experiments/workerThread/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 
 
     <display-name>Test</display-name>
-    <description>OPeNDAP Test Thingy</description>
+    <description>Worker Thread Test Thingy</description>
 
     <listener>
         <listener-class>opendap.experiments.WorkerThread</listener-class>
