--- a/resources/experiments/jsp/WEB-INF/web.xml
+++ b/resources/experiments/jsp/WEB-INF/web.xml
@@ -261,7 +261,7 @@
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/docs/error500.html</location>
+        <location>/docs/error500.jsp</location>
     </error-page>
     <error-page>
         <error-code>501</error-code>
@@ -296,7 +296,6 @@
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
-    <welcome-file>contents.html</welcome-file>
 </welcome-file-list>
 
 
