olfs: Checking in prototype jsp code for the admin interface

--- a/resources/experiments/jsp/WEB-INF/web.xml
+++ b/resources/experiments/jsp/WEB-INF/web.xml
@@ -257,7 +257,7 @@
     </error-page>
     <error-page>
         <error-code>404</error-code>
-        <location>/docs/error404.html</location>
+        <location>/docs/error404.jsp</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
