--- a/resources/experiments/jsp/WEB-INF/web.xml
+++ b/resources/experiments/jsp/WEB-INF/web.xml
@@ -318,10 +318,16 @@
     </security-constraint>
 
     <!-- Define the Login Configuration for this Application -->
+
     <login-config>
-        <auth-method>BASIC</auth-method>
+        <auth-method>FORM</auth-method>
         <realm-name>Hyrax Administration Pages</realm-name>
+        <form-login-config>
+            <form-login-page>/docs/admin/login.jsp</form-login-page>
+            <form-error-page>/docs/admin/login-failed.jsp</form-error-page>
+        </form-login-config>
     </login-config>
+
 
     <!-- Security roles referenced by this web application -->
     <security-role>
