--- a/build.xml
+++ b/build.xml
@@ -195,9 +195,8 @@
     <property name="logback-core.lib"     value="logback-core-0.9.26.jar"/>
     <property name="logback-classic.lib"  value="logback-classic-0.9.26.jar"/>
 
-    <property name="owlim.lib"            value="owlim-3.0.beta9.jar"/>
-    <property name="trree.lib"            value="trree-3.0.beta9.jar"/>
-    <property name="openrdf-sesame.lib"   value="openrdf-sesame-2.3.0-onejar.jar" />
+    <property name="owlim.lib"            value="owlim-lite-4.2.jar"/>
+    <property name="openrdf-sesame.lib"   value="openrdf-sesame-2.5.1-onejar.jar" />
 
     <property name="commons-cli.lib"        value="apache-commons-cli-1.2.jar"/>
     <property name="commons-httpclient.lib" value="apache-commons-httpclient-3.1.jar"/>
